unpackaged/main/default/objects/ReturnOrderLineItem/ReturnOrderLineItem.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>