unpackaged/main/default/objects/ReturnOrderLineItem/fields/AdditionalReturnReason__c.field-meta.xml
<CustomField>
    <fullName>AdditionalReturnReason__c</fullName>
    <label>Additional Return Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>