unpackaged/main/default/objects/ReturnOrderLineItem/fields/ConditionId__c.field-meta.xml
<CustomField>
    <fullName>ConditionId__c</fullName>
    <label>Condition Id</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resalable</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>