unpackaged/main/default/objects/ReturnOrderLineItem/fields/ExchangeSKU__c.field-meta.xml
<CustomField>
    <fullName>ExchangeSKU__c</fullName>
    <label>Exchange SKU</label>
    <length>40</length>
    <type>Text</type>
</CustomField>