unpackaged/main/default/objects/ReturnOrderLineItem/fields/FollowUpProcessed__c.field-meta.xml
<CustomField>
    <fullName>FollowUpProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow Up Processed</label>
    <type>Checkbox</type>
</CustomField>