unpackaged/main/default/objects/ReturnOrderLineItem/fields/GrossUnitPriceFormula__c.field-meta.xml
<CustomField>
    <fullName>GrossUnitPriceFormula__c</fullName>
    <formula>IF(CONTAINS(TEXT(GrossUnitPrice), &quot;.&quot;),SUBSTITUTE(TEXT(GrossUnitPrice) , &quot;.&quot;, &quot;,&quot;), TEXT(GrossUnitPrice)+&quot;,00&quot;) +&quot; &quot; + TEXT( CurrencyIsoCode )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Unit Price Formula</label>
    <type>Text</type>
</CustomField>