unpackaged/main/default/objects/ReturnOrderLineItem/fields/Quantity_Previously_Returned__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Previously_Returned__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantity Previously Returned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>