unpackaged/main/default/objects/ReturnOrderLineItem/fields/QuantityLeftToReceive__c.field-meta.xml
<CustomField>
    <fullName>QuantityLeftToReceive__c</fullName>
    <formula>QuantityExpected -  QuantityReceived</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuantityLeftToReceive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>