unpackaged/main/default/objects/ReturnOrderLineItem/fields/SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SerialNumber__c</fullName>
    <description>Concatenation of serial numbers.</description>
    <label>SerialNumber</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>