unpackaged/main/default/objects/ReturnOrderLineItem/fields/Sku_10_Digits__c.field-meta.xml
<CustomField>
    <fullName>Sku_10_Digits__c</fullName>
    <label>Sku 10 Digits</label>
    <length>18</length>
    <type>Text</type>
</CustomField>