unpackaged/main/default/objects/ReturnOrderLineItem/fields/Sku__c.field-meta.xml
<CustomField>
    <fullName>Sku__c</fullName>
    <formula>Product2.StockKeepingUnit</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sku</label>
    <type>Text</type>
</CustomField>