unpackaged/main/default/objects/ReturnOrderLineItem/fields/Tech_Reshiped_Qty__c.field-meta.xml
<CustomField>
    <fullName>Tech_Reshiped_Qty__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tech Reshiped Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>