unpackaged/main/default/objects/ReturnOrderLineItem/fields/TotalWithTaxFormula__c.field-meta.xml
<CustomField>
    <fullName>TotalWithTaxFormula__c</fullName>
    <formula>IF(CONTAINS(TEXT(TotalLineAmount + TotalLineTaxAmount), &quot;.&quot;),SUBSTITUTE(TEXT(TotalLineAmount + TotalLineTaxAmount) , &quot;.&quot;, &quot;,&quot;), TEXT(TotalLineAmount + TotalLineTaxAmount)+&quot;,00&quot;) +
&quot; &quot; + TEXT( CurrencyIsoCode )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total With Tax Formula</label>
    <type>Text</type>
</CustomField>